# vastra.ai

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml
.github/workflows/: deploy.yml
ai-service/: README.md  pyproject.toml
ai-service/service/: main.py
backend/: pyproject.toml  verify_api_flow.py  verify_auth.py  verify_pipeline.py
backend/app/: config.py  db.py  main.py  security.py  seed.py
backend/app/agents/: graph.py  llm.py  nodes.py  progress.py  schemas.py  state.py  trigger.py
backend/app/api/: analytics.py  auth.py  billing.py  connectors.py  deps.py  images.py  products.py  submissions.py
backend/app/models/: tables.py
backend/app/schemas/: auth.py  catalog.py
backend/app/services/: cache.py  gemini_images.py  image_gen.py  openai_images.py  pricing.py  shopify.py  storage.py  tokens.py
backend/app/workers/: queue.py
deploy/: Caddyfile  docker-compose.prod.yml
docs/: ARCHITECTURE.md
docs/decisions/: 0001-python-fastapi-react-stack.md  0002-deterministic-multi-agent-pipeline.md  0003-ai-image-editing-for-photo-cleanup.md  0004-webapp-first-intake.md  0005-sqlite-mvp-with-storage-abstraction.md  0006-shopify-graphql-admin-api.md  0007-claude-opus-tool-runner.md  0008-product-naming.md  README.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AuthShell.tsx  BrandLoader.tsx  DashboardLayout.tsx  Footer.tsx  GeneratingGallery.tsx  GenerationLoader.tsx  GoogleButton.tsx  ImageFeed.tsx  Logo.tsx  Navbar.tsx  PipelineDock.tsx  (+8 more)
(+18 files in other folders)
