[project]
name = "ai-service"
version = "0.1.0"
description = "vastra.ai agent pipeline service (LangGraph). Runs the intake, image, listing, marketing and publisher agents."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backend",
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "httpx>=0.28.1",
]

# Reuse the shared app package (config, db, models, agents, services) from the
# backend project without duplicating code. In a later hardening pass this can
# become a standalone `vastra_core` package depended on by both services.
[tool.uv.sources]
backend = { path = "../backend", editable = true }
